# squirreldb

./: .dockerignore  .gitignore  Cargo.toml  DOCKER.md  Dockerfile  LICENSE  Makefile  README.md  Trunk.toml  docker-compose.dev.yml  docker-compose.example.yml  docker-compose.yml  env.example  index.html  squirreldb.dev.yaml  squirreldb.docker.yaml  squirreldb.example.yaml  squirreldb.yaml  start.sh  test.db
.github/workflows/: ci.yml  release.yml  update-homebrew.yml
benches/: database.rs  query_engine.rs
crates/client/: Cargo.toml
crates/client/src/: connection.rs  lib.rs
crates/sqrl/: Cargo.toml
crates/sqrl/src/: commands.rs  main.rs  repl.rs
crates/sqrld/: Cargo.toml  Trunk.toml
crates/sqrld/src/: lib.rs  main.rs
crates/sqrld/src/admin/: api.rs  apiclient.rs  auth.rs  state.rs  styles.css
crates/sqrld/src/admin/components/: buckets.rs  console.rs  icons.rs  mod.rs  modal.rs  sidebar.rs
crates/sqrld/src/admin/components/auth/: mod.rs
crates/sqrld/src/admin/components/browser/: list.rs  mod.rs  preview.rs  upload.rs
crates/sqrld/src/admin/components/projects/: list.rs  mod.rs
crates/sqrld/src/admin/components/settings/: caching.rs  general.rs  mod.rs  storage.rs  tokens.rs
crates/sqrld/src/backup/: mod.rs  service.rs
crates/sqrld/src/cache/: commands.rs  config.rs  entry.rs  events.rs  mod.rs  resp.rs  server.rs  snapshot.rs  store.rs
crates/sqrld/src/cache/proxy/: client.rs  mod.rs
crates/sqrld/src/db/: backend.rs  postgres.rs  sqlite.rs
crates/sqrld/src/features/: config.rs  mod.rs
crates/sqrld/src/mcp/: server.rs
crates/sqrld/src/query/: compiler.rs  engine.rs  mod.rs  structured.rs
crates/sqrld/src/security/: mod.rs
crates/sqrld/src/server/: config.rs  daemon.rs  handler.rs  mod.rs  websocket.rs
crates/sqrld/src/storage/: backend.rs  config.rs  filesystem.rs  mod.rs  server.rs
crates/sqrld/src/storage/auth/: mod.rs  token.rs
crates/sqrld/src/storage/proxy/: client.rs  mod.rs
crates/sqrld/src/storage/routes/: bucket.rs  mod.rs  multipart.rs  object.rs
crates/sqrld/src/subscriptions/: manager.rs
crates/sqrld/tests/: authentication.rs  cache.rs  cli_commands.rs  compiler.rs  config.rs  documents.rs  features.rs  mcp.rs  protocol.rs  protocol_extended.rs  query_engine.rs  query_engine_extended.rs  security.rs  sqlite_backend.rs  types.rs
crates/types/: Cargo.toml
crates/types/src/: change.rs  document.rs  filter.rs  lib.rs  project.rs  protocol.rs  query.rs
docs/: index.md
docs/architecture/: overview.md
docs/configuration/: authentication.md  postgres.md  protocols.md  server.md  sqlite.md
docs/development/: guide.md
docs/features/: backup.md  caching.md  index.md  storage.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/operations/: admin-ui.md  backup.md  console.md  deployment.md  logs.md  monitoring.md  settings.md
docs/queries/: overview.md  reading.md  subscriptions.md  writing.md
docs/reference/: cli.md  protocol.md  rest-api.md
docs/sdks/: elixir.md  python.md  ruby.md  typescript.md
examples/: load_test.rs
migrations/: 001_initial_schema.sql  002_projects.sql
src/: lib.rs
src/admin/: api.rs  apiclient.rs  app.rs  client.js  main.rs  mod.rs  state.rs  styles.css
src/admin/components/: buckets.rs  console.rs  dashboard.rs  explorer.rs  icons.rs  live.rs  logs.rs  mod.rs  modal.rs  sidebar.rs  tables.rs  toast.rs
src/admin/components/auth/: login.rs  setup.rs  users.rs
src/admin/components/settings/: general.rs  mod.rs  storage.rs  tokens.rs
src/client/: commands.rs  connection.rs  mod.rs  repl.rs
src/db/: backend.rs  mod.rs  postgres.rs  sanitize.rs  sqlite.rs
src/features/: mod.rs
src/mcp/: server.rs
src/query/: compiler.rs  engine.rs  mod.rs  structured.rs
src/s3/: config.rs  error.rs  mod.rs  server.rs  storage.rs  types.rs  xml.rs
src/s3/auth/: mod.rs  sigv4.rs  token.rs
src/s3/routes/: bucket.rs  mod.rs  multipart.rs  object.rs
src/server/: config.rs  daemon.rs  handler.rs  mod.rs  rate_limiter.rs  tcp.rs  websocket.rs
src/storage/: config.rs  error.rs  filesystem.rs  mod.rs  server.rs  types.rs  xml.rs
src/storage/auth/: sigv4.rs  token.rs
src/storage/routes/: bucket.rs  mod.rs  object.rs
src/subscriptions/: manager.rs  mod.rs
src/types/: change.rs  document.rs  mod.rs  protocol.rs  query.rs
tests/: authentication.rs  cli_commands.rs  compiler.rs  config_extended.rs  documents.rs  mcp.rs  protocol_extended.rs  s3.rs  security.rs  sqlite_backend.rs  storage.rs  types.rs
