[workspace]
members = [
  "crates/types",
  "crates/client",
  "crates/sqrl",
  "crates/sqrld",
]
resolver = "2"

[workspace.package]
version = "0.2.5"
edition = "2021"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true

[profile.release-fast]
inherits = "release"
lto = "fat"
