[package]
name = "client"
version = "0.2.5"
edition = "2021"

[dependencies]
types = { path = "../types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "sync", "rt"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
