[package]
name = "sqrl"
version = "0.2.5"
edition = "2021"

[[bin]]
name = "sqrl"
path = "src/main.rs"

[dependencies]
types = { path = "../types" }
client = { path = "../client" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
anyhow = "1"
rustyline = "15"
colored = "3"
comfy-table = "7"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
