[package]
name = "sqrld"
version = "0.2.5"
edition = "2021"

[lib]
name = "squirreldb"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sqrld"
path = "src/main.rs"
required-features = ["server"]

[[bin]]
name = "sqrl-admin"
path = "src/admin/main.rs"
required-features = ["csr"]

[dependencies]
types = { path = "../types" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# === Server-side dependencies (optional) ===

# Async runtime
tokio = { version = "1", features = ["full"], optional = true }

# PostgreSQL
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1", "with-chrono-0_4"], optional = true }
deadpool-postgres = { version = "0.14", optional = true }
postgres-types = { version = "0.2", features = ["derive"], optional = true }

# SQLite
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
tokio-rusqlite = { version = "0.6", optional = true }

# Async traits
async-trait = { version = "0.1", optional = true }

# WebSocket
tokio-tungstenite = { version = "0.26", optional = true }
futures-util = { version = "0.3", optional = true }

# HTTP server / Admin UI
axum = { version = "0.8", features = ["ws", "multipart"], optional = true }
tower-http = { version = "0.6", features = ["cors", "fs"], optional = true }
tower = { version = "0.5", optional = true }
http = { version = "1", optional = true }

# JavaScript engine
rquickjs = { version = "0.9", features = ["full-async", "parallel"], optional = true }

# Serialization (server)
rmp-serde = { version = "1.1", optional = true }

# Utilities (server)
uuid = { version = "1", features = ["v4", "serde", "fast-rng"], optional = true }
sha2 = { version = "0.10", optional = true }
rand = { version = "0.8", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
thiserror = { version = "2", optional = true }
anyhow = { version = "1", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Config
clap = { version = "4", features = ["derive", "env"], optional = true }
serde_yaml = { version = "0.9", optional = true }

# MCP (Model Context Protocol)
rmcp = { version = "0.13", features = ["server", "transport-io", "transport-streamable-http-server"], optional = true }

# Performance
parking_lot = { version = "0.12", optional = true }
mimalloc = { version = "0.1", default-features = false, optional = true }
lru = { version = "0.12", optional = true }

# S3 compatibility
md5 = { version = "0.7", optional = true }
hex = { version = "0.4", optional = true }
hmac = { version = "0.12", optional = true }
urlencoding = { version = "2", optional = true }
regex = { version = "1", optional = true }

# S3 proxy mode (external S3 backend)
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", features = ["behavior-version-latest"], optional = true }
aws-credential-types = { version = "1", optional = true }

# Redis proxy mode (external Redis backend)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }

# Authentication
argon2 = { version = "0.5", optional = true }

# === CSR/WASM dependencies (optional) ===

# Leptos - CSR UI (for WASM admin panel)
leptos = { version = "0.6", optional = true }
leptos_router = { version = "0.6", optional = true }
leptos_meta = { version = "0.6", optional = true }

# WASM support for CSR
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = [
  "Window", "Document", "Location", "Storage",
  "Request", "Response", "Headers", "RequestInit",
  "console", "Navigator", "Clipboard",
  "File", "FileList", "DataTransfer", "DragEvent", "HtmlInputElement", "Blob", "FormData", "MouseEvent"
] }
gloo-net = { version = "0.6", optional = true }
gloo-storage = { version = "0.3", optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[features]
default = ["server"]
server = [
  "tokio",
  "tokio-postgres",
  "deadpool-postgres",
  "postgres-types",
  "rusqlite",
  "tokio-rusqlite",
  "async-trait",
  "tokio-tungstenite",
  "futures-util",
  "axum",
  "tower-http",
  "tower",
  "http",
  "rquickjs",
  "rmp-serde",
  "uuid",
  "sha2",
  "rand",
  "chrono",
  "thiserror",
  "anyhow",
  "tracing",
  "tracing-subscriber",
  "clap",
  "serde_yaml",
  "rmcp",
  "parking_lot",
  "mimalloc",
  "lru",
  "md5",
  "hex",
  "hmac",
  "urlencoding",
  "regex",
  "argon2",
  "aws-sdk-s3",
  "aws-config",
  "aws-credential-types",
  "redis"
]
csr = [
  "leptos",
  "leptos/csr",
  "leptos_router",
  "leptos_router/csr",
  "leptos_meta",
  "leptos_meta/csr",
  "wasm-bindgen",
  "wasm-bindgen-futures",
  "web-sys",
  "gloo-net",
  "gloo-storage",
  "gloo-timers",
  "js-sys",
  "console_error_panic_hook",
  "urlencoding"
]
